--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,54 @@
+name = "Hugo blog awesome"
+license = "MIT"
+
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Yolo Notes"
 theme = "hugo-blog-awesome"
+
+[[params.socialIcons]]
+name = "github"
+url = "https://github.com/yoloyolo8"
+
+[[params.socialIcons]]
+name = "twitter"
+url = "https://twitter.com/0xyolo"
+
+[[params.socialIcons]]
+name = "Rss"
+url = "index.xml"
+
+[params]
+  goToTop = true
+  
+
+# Enable emojis globally
+enableEmoji = true
+
+
+[menu]
+  [[menu.main]]
+    # The page reference (pageRef) is useful for menu highlighting
+    # When pageRef is set, setting `url` is optional; it will be used as a fallback if the page is not found.
+    pageRef="/"
+    name = 'Home'
+    url = '/'
+    weight = 10
+  [[menu.main]]
+    pageRef="posts"
+    name = 'Posts'
+    url = '/posts/'
+    weight = 20
+  [[menu.main]]
+    pageRef="about"
+    name = 'About'
+    url = '/about/'
+    weight = 30
+
+
+[params.author]
+  avatar = "avatar.jpg" # put the file in assets folder; also ensure that image has same height and width
+  # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
+  intro = "Yolo Notes"
+  name = "Yolo"
+  description = "我的个人笔记，读书|代码|写字"
