--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,17 @@
+[module]
+  [[module.imports]]
+    path = "github.com/hugo-sid/hugo-blog-awesome"
+
+
+
 name = "Hugo blog awesome"
 license = "MIT"
 
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Yolo Notes"
-theme = "hugo-blog-awesome"
+
+# theme = "hugo-blog-awesome"
 
 [[params.socialIcons]]
 name = "github"
